events endpoints, application endpoints and status kanban logic
